1、小调整